--- a/fs/Makefile
+++ b/fs/Makefile
@@ -132,3 +132,5 @@ obj-$(CONFIG_PSTORE)		+= pstore/
 
 # Patched by YAFFS
 obj-$(CONFIG_YAFFS_FS)		+= yaffs2/
+obj-$(CONFIG_EFIVAR_FS)		+= efivarfs/
+obj-$(CONFIG_DYNAMIC_FSYNC)  += dyn_sync_cntrl.o
