--- a/arch/arm/configs/cyanogen_loganre_defconfig
+++ b/arch/arm/configs/cyanogen_loganre_defconfig
@@ -46,7 +46,7 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_BFQ=y
+CONFIG_DEFAULT_NOOP=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
