--- a/arch/arm/configs/cyanogen_loganre_defconfig
+++ b/arch/arm/configs/cyanogen_loganre_defconfig
@@ -612,3 +612,11 @@ CONFIG_CRC_CCITT=y
 # CONFIG_HOTPLUG_CPU is not set
 # CONFIG_INTELLI_PLUG is not set
 # CONFIG_CPU_UNDERCLOCK is not set
+
+# Enable kexec hardboot support.
+CONFIG_HAVE_END_MEM=y
+CONFIG_END_MEM=0xffffffff
+CONFIG_KEXEC=y
+CONFIG_ATAGS_PROC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_KEXEC_HB_PAGE_ADDR=0x88900000
