--- a/arch/arm/configs/cyanogen_loganre_defconfig
+++ b/arch/arm/configs/cyanogen_loganre_defconfig
@@ -418,6 +418,7 @@ CONFIG_SND_DYNAMIC_MINORS=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MSM8930=y
+CONFIG_SEC_DHA_SOL_MAL=y
 CONFIG_HIDRAW=y
 CONFIG_DOCK_EN=y
 CONFIG_UHID=y
