--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,8 @@ jobs:
       run: |
         export KBUILD_BUILD_USER=notnoelchannel
         export KBUILD_BUILD_HOST=unlegacy-devices
-        make syncconfig
-        make distclean
         make -j22 ARCH=arm VARIANT_DEFCONFIG=msm8930_loganre_eur_lte_defconfig cyanogen_loganre_defconfig
-        make -j128
+        make oldconfig
     - name: Moving Output # CI only
       run: |
         mkdir -p /home/runner/work/output
